[gd_scene load_steps=6 format=2]

[ext_resource path="res://content/techtree/highlight.gdshader" type="Shader" id=1]
[ext_resource path="res://content/techtree/panels/big_dark.png" type="Texture" id=2]
[ext_resource path="res://content/gamemode/gadgetchoice/GadgetOption.gd" type="Script" id=3]
[ext_resource path="res://content/techtree/panels/big_focus.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )

[node name="GadgetOption" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1784.0
margin_bottom = -942.0
focus_mode = 2
mouse_filter = 0
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="GadgetIcon" type="TextureRect" parent="."]
margin_left = -4.0
margin_top = -4.0
margin_right = 46.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_horizontal = 4
expand = true
stretch_mode = 6

[node name="SelectedPanel" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 136.0
margin_bottom = 138.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_GadgetOption_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_GadgetOption_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_GadgetOption_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_GadgetOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GadgetOption_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
